# kavita-discord-rpc

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.json  docker-compose.yml
config/: config.example.json
coverart-server/: Dockerfile  docker-compose.yml  package.json  server.js
src/: main.rs
